# hyrced

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
static/: index.htm
tests/: version.rs
