[package]
name = "hyrced"
version = "0.1.0-dev"
description = "Daemon providing remote command execution over HTTP"

authors = ["Jérémie Roquet <jroquet@arkanosis.net>"]

documentation = "https://github.com/Arkanosis/hyrced"
homepage = "https://github.com/Arkanosis/hyrced"
repository = "https://github.com/Arkanosis/hyrced"

readme = "README.md"
license = "ISC"

keywords = ["remote", "command", "execution", "rce", "http"]
categories = ["command-line-utilities"]

edition = "2024"
build = "build.rs"

[dependencies]
actix-files = "0.6"
actix-web = "4.10"
askama = "0.13"
docopt = "1.1"
mime = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[build-dependencies]
vergen-git2 = "1.0"
